resources/bootstrap3/css/common_styles.css
/* 
    Created on : Mar 10, 2015, 5:34:03 PM
    Author     : Tanveer Ahmed
*/

/*UNIVARSAL*/
select, option{
    font-size: 13px;
    font-family: arial,helvetica,sans-serif;
}
body
{
    font-family: arial,helvetica,sans-serif !important;
}
/*UNIVARSAL*/
.imgbuttonb {
    height: 32px;
    position: absolute;
    right: 64px;
    top: 30px;
    width: 32px;
}
.imgbuttonf {
    height: 32px;
    position: absolute;
    right: 32px;
    top: 30px;
    width: 32px;
}

.heading_medium, .heading_small,
.small_text_dark, .small_text_pale,
.content_text{
    font-family: arial,helvetica,sans-serif;
}
.heading_big, .heading_medium, .heading_small{
    font-weight: bold;
    /*color: #222;*/
}
.heading_big{
    font-family: helvetica, arial, sans-serif;
    margin: 10px 0px;
    font-size: 30px;
}
.heading_big_alignment{
    margin-top: 5px;
}
.heading_medium, .heading_medium_thin{
    font-size: 20px;
}
.heading_small{
    font-size: 14px;
}
.small_text_dark, .small_text_pale{
    font-size: 12px;
}
.small_text_dark{
    font-weight: bold;
}
.small_text_pale{
    color: #666;
}
.content_text{
    font-size: 14px;
    /*color: #333;*/
}
.paypal_img_margir{
    margin-left: -22px;
}


.recipe_item_logo, .news_item_logo, .blogs_item_logo{
    height: 100%;
    width: 100%;
}
.recipe_item_logo_anchor, .recipe_item_logo_anchor:hover, .recipe_item_logo_anchor:focus, .news_item_logo_anchor, .news_item_logo_anchor:hover, .news_item_logo_anchor:focus, .blogs_item_logo_anchor, .blogs_item_logo_anchor:hover, .blogs_item_logo_anchor:focus{
    text-decoration: none; 
    color: #000;
}

.app_header_bg{
    background-color: #EFEFEF!important;
}

@media (min-width: 992px) {
    .follower_list_inline_custom{
        margin-left: 15px;
    }
}

